# packaging-demo-himanshu

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: publish.yml
packaging_demo/: cities.json  colorized_demo.py  my_file.py  my_other_file.py  states_info.py
packaging_demo/my_folder/: my_nested_file.py
